Modify ruff commands to check, fix, and format
Updated ruff commands to include auto-fix and formatting.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
           if [ -d .venv ]; then
             export PATH=$PWD/.venv/bin:$PATH
           fi
-          ruff check .
+          ruff check --fix .
+          ruff format .
 
       - name: Run tests
         run: |
