Add additional words to cSpell configuration for improved spell checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,15 @@
   "editor.formatOnSave": true,
   "files.autoSaveWhenNoErrors": true,
   "cSpell.words": [
-    "dasharray"
+    "dasharray",
+    "geodataframe",
+    "Isochrone",
+    "maxx",
+    "maxy",
+    "miny",
+    "reprojected",
+    "shapefiles",
+    "steelblue",
+    "uploaders"
   ],
 }
