--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,6 @@ jobs:
       - name: Upgrade pip & install basics
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install ruff pytest
 
       - name: Install uv (v0.9.26) and dependencies
         run: |
@@ -47,11 +46,8 @@ jobs:
 
       - name: Ruff lint
         run: |
-          if [ -d .venv ]; then
-            export PATH=$PWD/.venv/bin:$PATH
-          fi
-          ruff check .
-          ruff format --check .
+          uv run ruff check .
+          uv run ruff format --check .
 
       - name: Run tests
         run: |
